fix media query for contact section when on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,8 @@ text-align: center;
 
 .nav-bar li {
 display: inline-block;
-text-align: right;
+margin-right: 30px;
+
 
 }
 
@@ -175,6 +176,7 @@ padding-left: 15px;
     justify-content: center;
     background-color: #8BAFB9;
     width: 50%; 
+    height: 100%;
     left: 20%;
     padding: 20px;
     margin: 0 auto;
@@ -208,7 +210,7 @@ label {
     padding: 3px;
     height: 25px;
     margin: 5px 0 20px 0;
-    width: 30%;
+    width: 50%;
     
 }
 
@@ -264,6 +266,12 @@ button {
 }
 
 
+@media all and (max-width:581px){
+    .contact-section{
+        width: 100%;
+    }
+
+}
    
 @media screen and (max-width:900px) {
     .container {
@@ -274,6 +282,7 @@ button {
         
     }
 
-
+   
 }
+
 
